frontend/src/shiftpage/shiftpage.css
.background {
    opacity: 0.5;
}

.calendar-page {
    background-color: rgba(255, 255, 255, 0.5);
}

.title-header {
    display: grid;
    grid-template-columns: 9fr 1fr;
}

.calendar-header {
    font-weight: 500;
    font-size: 42px;
}

.page-container {
    display: flex;
    flex-direction: column;
}

.header-container {
    display: flex;
    justify-content: flex-start;
    margin-top: 53px;
}

.header-container h1 {
    margin-left: -120px;
}

.btn-container {
    display: flex;
    justify-content: flex-start;
    margin-right: auto;
    position: static;
}

.btn-container button {
    margin-right: 48px;
    vertical-align: middle;
}
.unreleased-state {
    background-color: rgb(245, 172, 183) !important;
}

h1 {
    font-style: normal;
    font-weight: 600;
    font-size: 35px;
    line-height: 42px;
}

.modal-content {
    background: #ffffff;
    border-radius: 20px;
}

.shiftList-container {
    display: grid;
    width: 80%;
    grid-template-columns: repeat(3, 1fr);
    grid-auto-rows: auto;
    grid-gap: 10px;
    align-self: center;
    margin-right: 150px;
}

#whiteButton {
    width: 248px;
    height: 63px;
    font-family: "Lato";
    font-style: normal;
    font-weight: 700;
    font-size: 20px;
    text-align: center;
    line-height: 24px;
    background: #ffffff;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 40px;
    border: 0;
    outline: none;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

#whiteButton:hover {
    transform: scale(0.97);
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
}

.btn-icon {
    margin-right: 20px;
}

.export-parent {
    position: fixed;
    right: 20px;
    bottom: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.export-parent .btn-primary {
    border-radius: 4rem;
    padding: 0.9rem 1.75rem;
    font-size: 18px;
    font-weight: 400;
    line-height: 19px;
    color: #ffffff;
    font-family: Lato;
    font-style: normal;
    border: 0;
    margin-bottom: 10px;
    background: #3a5fe2;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    cursor: pointer;
}

.export-parent .btn-primary:hover {
    transform: translateY(-0.25em);
    background: #2a4cb8;
}

.view-select {
    display: flex;
    justify-content: space-between;
    margin-left: 40px;
    margin-right: 150px;
    border-radius: 8px;
    width: 150px;
    height: 80px;
}

.tab-container {
    display: flex;
    flex-direction: column;
    margin-right: 20px;
    margin-top: 180px;
    background-color: #f1f1f1;
    padding: 10px;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.tab {
    padding: 10px 15px;
    cursor: pointer;
    border-radius: 5px;
    margin-bottom: 5px;
    transition: background-color 0.3s, color 0.3s;
    text-align: left;
}

.tab:hover {
    background-color: #e7e7e7;
}

.tab.active {
    background-color: white;
    color: #3a5fe2;
    font-weight: bold;
}

.main-container {
    display: flex;
    align-items: start;
    padding: 20px;
}

.tab.active {
    background-color: white;
    border-left: 4px solid #3a5fe2;
}

